Better logging and refactoring and added configs  for moven container image generation